--- a/Humanoid-Robots-Book/package.json
+++ b/Humanoid-Robots-Book/package.json
@@ -25,6 +25,8 @@
     "@docusaurus/core": "^3.0.0",
     "@docusaurus/preset-classic": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.6.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "prism-react-renderer": "^2.1.0",
