--- a/Humanoid-Robots-Book/package.json
+++ b/Humanoid-Robots-Book/package.json
@@ -36,6 +36,7 @@
     "@docusaurus/module-type-aliases": "^3.0.0",
     "@docusaurus/tsconfig": "^3.0.0",
     "@docusaurus/types": "^3.0.0",
+    "@playwright/test": "^1.57.0",
     "@types/react": "^18.2.0",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
